--- a/frontend/style.css
+++ b/frontend/style.css
@@ -4,11 +4,35 @@
   box-sizing: border-box;
 }
 
-body {
+.body {
   background-color: #292524;
   color: #fafaf9;
   font-family: "Sono", sans-serif;
   padding: 48px 64px;
+}
+
+.dashboard {
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+}
+.dashboard h1 {
+  color: #333;
+}
+.dashboard p {
+  color: #666;
+}
+.dashboard a {
+  display: inline-block;
+  margin: 10px 0;
+  padding: 10px 20px;
+  color: #fff;
+  background-color: #007BFF;
+  text-decoration: none;
+  border-radius: 5px;
+}
+.dashboard a:hover {
+  background-color: #0056b3;
 }
 
 .hidden {
