--- a/frontend/style.css
+++ b/frontend/style.css
@@ -4,8 +4,10 @@
   box-sizing: border-box;
 }
 
-.body {
+body {
   display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #292524;
   color: #fafaf9;
   font-family: "Sono", sans-serif;
@@ -54,16 +56,6 @@ h2 {
   background-color: #44403c;
   padding: 2rem;
   border-radius: 16px;
-  text-align: center;
-}
-
-.createpost-container {
-  max-width: 500px;
-  margin: 0 auto;
-  background-color: #44403c;
-  padding: 2rem;
-  border-radius: 16px;
-  text-align: center;
 }
 
 .profile-container img {
@@ -72,6 +64,17 @@ h2 {
   border-radius: 50%;
   object-fit: cover;
   margin-bottom: 1rem;
+}
+
+.blogposts-container {
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+  margin: 0 auto;
+  background-color: #44403c;
+  padding: 2rem;
+  border-radius: 16px;
+
 }
 
 form {
@@ -115,6 +118,46 @@ form input[type="file"] {
   padding: 0.5rem;
   border: none;
   border-radius: 4px;
+}
+
+.post {
+  max-width: 500px;
+  margin: 0 auto 2rem;
+  background-color: #44403c;
+  padding: 2rem;
+  border-radius: 16px;
+}
+
+.post h2 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.post p {
+  margin-bottom: 1rem;
+}
+
+a {
+  display: inline-block;
+  font-family: "Coiny", sans-serif;
+  line-height: 1;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  padding: 16px 0 13px;
+  background-image: linear-gradient(135deg, #3b82f6, #ef4444, #16a34a, #eab308);
+  color: inherit;
+  border-radius: 100px;
+  cursor: pointer;
+  transition: 0.3s;
+  text-align: center;
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+  text-decoration: none;
+}
+
+a:hover {
+  transform: scale(110%) rotate(-2deg);
 }
 
 .dashboard a {
