--- a/frontend/style.css
+++ b/frontend/style.css
@@ -67,15 +67,31 @@ h2 {
 }
 
 .blogposts-container {
+  max-width: 1500px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
-  max-width: 500px;
   margin: 0 auto;
   background-color: #44403c;
   padding: 2rem;
   border-radius: 16px;
 
 }
+.blogPost {
+  font-size: 1rem;
+  line-height: 1.4;
+  columns: #fafaf9;
+  background-color: #44403c;
+  margin-bottom: 1rem;
+  padding: 1rem 1.2rem;
+  letter-spacing: -1px;
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
+  border-radius: 16px;
+}
+
+
 
 form {
   max-width: 500px;
@@ -123,7 +139,7 @@ form input[type="file"] {
 .post {
   max-width: 500px;
   margin: 0 auto 2rem;
-  background-color: #44403c;
+  background-color: #78716c;
   padding: 2rem;
   border-radius: 16px;
 }
@@ -137,7 +153,7 @@ form input[type="file"] {
   margin-bottom: 1rem;
 }
 
-a {
+/* a {
   display: inline-block;
   font-family: "Coiny", sans-serif;
   line-height: 1;
@@ -158,7 +174,7 @@ a {
 
 a:hover {
   transform: scale(110%) rotate(-2deg);
-}
+} */
 
 .dashboard a {
   display: inline-block;
@@ -223,15 +239,6 @@ button[type="submit"]:hover {
   cursor: pointer;
 }
 
-.hidden {
-  display: none !important;
-}
-
-/* MAIN LAYOUT */
-.container {
-  max-width: 1500px;
-  margin: 0 auto;
-}
 
 .header {
   margin-bottom: 40px;
@@ -241,8 +248,7 @@ button[type="submit"]:hover {
 }
 
 .main {
-  display: grid;
-  grid-template-columns: 250px 1fr;
+  display: flex;
   gap: 48px;
 }
 
@@ -299,41 +305,6 @@ h1 {
   }
 }
 
-.tag {
-  text-transform: uppercase;
-  font-size: 14px;
-  font-family: "Coiny", sans-serif;
-  padding-top: 3px;
-  padding-left: 10px;
-  padding-right: 10px;
-  border-radius: 100px;
-}
-
-.vote-buttons {
-  margin-left: auto;
-  flex-shrink: 0;
-
-  display: flex;
-  gap: 8px;
-}
-
-.vote-buttons button {
-  border: none;
-  background-color: #78716c;
-  font-size: 18px;
-  padding: 6px 12px;
-  border-radius: 100px;
-  color: inherit;
-  font-family: inherit;
-  font-weight: 600;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.vote-buttons button:hover {
-  background-color: #292524;
-}
-
 ul {
   list-style: none;
 }
@@ -356,23 +327,22 @@ ul {
   font-family: "Coiny", sans-serif;
   line-height: 1;
   text-transform: uppercase;
-  font-size: 17px;
+  font-size: 0.8rem;
   padding: 16px 0 13px;
   background-image: linear-gradient(135deg, #3b82f6, #ef4444, #16a34a, #eab308);
   color: inherit;
   border-radius: 100px;
   cursor: pointer;
   transition: 0.3s;
+  width: 100%;
 }
+
 
 .btn:hover {
   transform: scale(110%) rotate(-2deg);
-}
+} 
 
-.btn-large {
-  font-size: 20px;
-  padding: 20px 32px 17px;
-}
+
 
 .btn-all-categories {
   margin-bottom: 16px;
@@ -385,7 +355,7 @@ ul {
 }
 
 /* FORM */
-.fact-form {
+/* .fact-form {
   background-color: #44403c;
   margin-bottom: 40px;
   padding: 16px 32px;
@@ -419,7 +389,7 @@ ul {
   font-weight: 600;
   font-size: 18px;
   margin-right: 18px;
-}
+} */
 
 @media (max-width: 1000px) {
   body {
