--- a/frontend/style.css
+++ b/frontend/style.css
@@ -94,6 +94,9 @@ h2 {
 
 
 form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
   max-width: 500px;
   margin: 0 auto;
   color: #fafaf9;
@@ -153,7 +156,7 @@ form input[type="file"] {
   margin-bottom: 1rem;
 }
 
-.dashboard a {
+ a {
   display: inline-block;
   border: none;
   font-family: "Coiny", sans-serif;
@@ -170,7 +173,7 @@ form input[type="file"] {
   margin-bottom: 1rem;
 }
 
-.dashboard a:hover {
+ a:hover {
   transform: scale(110%) rotate(-2deg);
 }
 
