--- a/frontend/style.css
+++ b/frontend/style.css
@@ -58,7 +58,7 @@ h2 {
   border-radius: 16px;
 }
 
-.profile-container img {
+.avatar {
   width: 100px;
   height: 100px;
   border-radius: 50%;
@@ -238,18 +238,9 @@ button[type="submit"]:hover {
   }
 }
 
-/* ELEMENTS */
 
-.logo {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-}
 
-.logo img {
-  width: 68px;
-  height: 68px;
-}
+
 
 h1 {
   font-size: 42px;
