--- a/frontend/style.css
+++ b/frontend/style.css
@@ -51,6 +51,8 @@ h2 {
 }
 
 .profile-container {
+  display: flex;
+  flex-direction: column;
   max-width: 500px;
   margin: 0 auto;
   background-color: #44403c;
@@ -162,6 +164,7 @@ form input[type="file"] {
   font-family: "Coiny", sans-serif;
   line-height: 1;
   text-transform: uppercase;
+  text-align: center;
   font-size: 0.8rem;
   padding: 10px 20px;
   background-image: linear-gradient(135deg, #3b82f6, #ef4444, #16a34a, #eab308);
@@ -269,7 +272,7 @@ h1 {
 }
 
 @media (max-width: 1200px) {
-  .fact {
+  .post {
     flex-direction: column;
     align-items: flex-end;
     gap: 12px;
@@ -298,6 +301,7 @@ ul {
   font-family: "Coiny", sans-serif;
   line-height: 1;
   text-transform: uppercase;
+  text-align: center;
   font-size: 0.8rem;
   padding: 16px 20px 15px 20px;
   background-image: linear-gradient(135deg, #3b82f6, #ef4444, #16a34a, #eab308);
@@ -323,6 +327,10 @@ ul {
 .btn-category {
   width: 100%;
   background-image: none;
+}
+
+.dashboardButton {
+
 }
 
 @media (max-width: 1000px) {
