--- a/frontend/style.css
+++ b/frontend/style.css
@@ -34,11 +34,27 @@ h2 {
 }
 
 .login-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   max-width: 500px;
   margin: 0 auto;
   background-color: #44403c;
   padding: 2rem;
   border-radius: 16px;
+}
+
+.login-container h2 {
+  text-align: center;
+}
+
+.login-container h3 {
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-family: "Coiny", sans-serif;
+  color: #fafaf9;
+  line-height: 1;
+  text-align: center;
 }
 
 .dashboard-container {
@@ -77,8 +93,6 @@ h2 {
   background-color: #44403c;
   padding: 2rem;
   border-radius: 16px;
-
-
 }
 
 .blogPost {
@@ -93,7 +107,6 @@ h2 {
   gap: 1.2rem;
   border-radius: 16px;
 }
-
 
 .post {
   max-width: 100%; /* Ensure the image doesn't overflow its container */
@@ -110,8 +123,6 @@ h2 {
 .post a {
   margin: 1rem 0.2rem;
 }
-
-
 
 form {
   display: flex;
@@ -161,7 +172,7 @@ form input[type="file"] {
 
 .post {
   max-width: 500px;
-  
+
   margin: 0 auto 2rem;
   background-color: #78716c;
   padding: 2rem;
@@ -178,7 +189,7 @@ form input[type="file"] {
   overflow: hidden;
 }
 
- a {
+a {
   display: inline-block;
   border: none;
   font-family: "Coiny", sans-serif;
@@ -196,7 +207,7 @@ form input[type="file"] {
   margin-bottom: 1rem;
 }
 
- a:hover {
+a:hover {
   transform: scale(110%) rotate(-2deg);
 }
 
@@ -242,7 +253,6 @@ button[type="submit"]:hover {
   cursor: pointer;
 }
 
-
 .header {
   margin-bottom: 40px;
   display: flex;
@@ -260,10 +270,6 @@ button[type="submit"]:hover {
     grid-template-columns: 1fr;
   }
 }
-
-
-
-
 
 h1 {
   font-size: 42px;
@@ -332,12 +338,9 @@ ul {
   width: 100%;
 }
 
-
 .btn:hover {
   transform: scale(110%) rotate(-2deg);
-} 
-
-
+}
 
 .btn-all-categories {
   margin-bottom: 16px;
@@ -348,7 +351,6 @@ ul {
   width: 100%;
   background-image: none;
 }
-
 
 @media (max-width: 1000px) {
   body {
