--- a/frontend/style.css
+++ b/frontend/style.css
@@ -76,6 +76,16 @@ h2 {
   border-radius: 16px;
 }
 
+.blog-container{
+
+  display: flex;
+  flex-direction: column;
+}
+.blog-container a {
+
+
+}
+
 .avatar {
   width: 100px;
   height: 100px;
