--- a/frontend/style.css
+++ b/frontend/style.css
@@ -76,15 +76,12 @@ h2 {
   border-radius: 16px;
 }
 
-.blog-container{
+/* .blog-container{
 
   display: flex;
   flex-direction: column;
-}
-.blog-container a {
+} */
 
-
-}
 
 .avatar {
   width: 100px;
@@ -95,7 +92,7 @@ h2 {
 }
 
 .blogposts-container {
-  max-width: 1500px;
+  max-width: 2000px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -105,7 +102,9 @@ h2 {
   border-radius: 16px;
 }
 
-.blogPost {
+
+
+.blogPosts {
   font-size: 1rem;
   line-height: 1.4;
   background-color: #44403c;
@@ -113,21 +112,22 @@ h2 {
   padding: 1rem 1.2rem;
   letter-spacing: -1px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   gap: 1.2rem;
   border-radius: 16px;
 }
 
 .post {
-  max-width: 100%; /* Ensure the image doesn't overflow its container */
-  margin: 0 auto; /* Center the image horizontally */
+  max-width: 100%; 
+  margin: 0 auto; 
 }
 
 .post img {
-  display: block; /* Ensure the image behaves as a block element */
-  max-width: 100%; /* Ensure the image doesn't overflow its container */
-  height: auto; /* Maintain aspect ratio */
-  border-radius: 8px; /* Optional: Add border-radius to the image */
+  display: block; 
+  max-width: 100%; 
+  height: auto; 
+  border-radius: 8px;
 }
 
 .post a {
